--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
 {
   "pages": [
+    "pages/video/video",
     "pages/index/index",
     "pages/index/detail/detail",
-    "pages/video/video",
+    "pages/skill/skill",
     "pages/video/video-detail/video-detail",
-    "pages/skill/skill"
+    "pages/skill/skill-detail/skill-detail"
   ],
   "window": {
     "backgroundTextStyle": "light",
