--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
     "pages/video/video-detail/video-detail",
     "pages/skill/skill",
     "pages/skill/skill-list/skill-list",
-    "pages/skill/skill-detail/skill-detail"
+    "pages/skill/skill-detail/skill-detail",
+    "pages/search/search"
   ],
   "window": {
     "backgroundTextStyle": "light",
